--- a/css/style.css
+++ b/css/style.css
@@ -371,6 +371,32 @@ div {
 }
 
 /* CONTACT ME END */
+.contactMeSection {
+  height: 200px;
+  position: relative;
+  border: 3px solid green;
+}
+.contactMe {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.container {
+  height: 200px;
+  position: relative;
+  border: 3px solid green;
+}
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
 
 /* FOOTER */
 .footer{
