--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ img {
   margin-right: auto;
   margin-bottom: %;
   margin-left: 8%;
-  background-image: url("../images/heroImage.png");
+  background-image: url("../images/heroImage1.png");
 
   background-size: cover;
   background-repeat: no-repeat;
