--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ img {
   background: lightblu;
   padding: 12%;
   margin: 15%;
-  background-image: url("../images/OrangeRec1.png");
+  background-image: url("../images/heroImage1.png");
 }
  #CFGItext {
    position: absolute;
